--- a/Käyttöliittymä/style.game.css
+++ b/Käyttöliittymä/style.game.css
@@ -1,7 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    background-color: #d8f8e9;
+    background-color: #DBEAE7;
     font-family: "Georgia Pro Black";
 }
 
@@ -16,12 +16,11 @@ html, body {
 }
 
 .page-header {
-    background-color: #8fb065;
-    color: #2f173f;
+    background-color: #2a1836;
+    color: #DBEAE7;
     border-radius: 4px;
     display: flex;
     justify-content: space-between;
-    border: 1px solid #2f173f;
 }
 
 .title {
@@ -39,30 +38,71 @@ ul {
 }
 
 .button {
-    color: rgba(216, 248, 233, 0.87);
-    padding: 2rem;
+    color: #2a1836;
+    padding: 1rem;
     display: block;
-    background-color: #c56af5;
+    background-color: #e99b5d;
     text-decoration: none;
     border-radius: 6px;
-    border: 1px solid #2f173f;
+    border: 1px solid #DBEAE7;
+}
+
+.hint {
+    background-color: #85C094;
+    border-radius: 4px;
+    border: 1px solid #2a1836;
+    color: #2a1836;
+    padding: 1rem;
+}
+
+.coincidence {
+    border-radius: 4px;
+    border: 1px solid #2a1836;
+    color: #2a1836;
+    background-color: #c36bc4;
+    padding: 1rem;
+}
+
+.icao-button {
+    background-color: #e99b5d;
+    color: #2a1836;
+    padding: 1rem;
+    text-decoration: none;
+    border-radius: 6px;
+    border: 2px solid #DBEAE7;
+}
+
+.buttons {
+    padding: 1rem;
+}
+
+.work {
+    border-radius: 4px;
+    border: 1px solid #2a1836;
+    color: #2a1836;
+    padding-left: 1rem;
+    background-color: #c36bc4;
+}
+
+.status {
+    background-color: #85C094;
+    border-radius: 4px;
+    border: 1px solid #2a1836;
+    color: #2a1836;
+    padding: 1rem;
 }
 
 .map {
     height: auto;
     width: 100%;
+    border: 1px solid #2a1836;
+    border-radius: 4px;
 }
 
 #map {
     width: 500px;
     height: 500px;
-    max-width: 60%;
 }
 
 .game-elements {
-    width: 50%;
-}
-
-.box {
-    padding: 1rem;
 }
