--- a/HTML+CSS/styling.css
+++ b/HTML+CSS/styling.css
@@ -1,15 +1,96 @@
+ourColorPalette {
+    color: #DBEAE7;
+    color: #85C094;
+    color: #357654;
+    color: #392E3E;
+    color: #B164B4;
+    color: #E99B5D;
+}
+
+
 /*
+-----------------------------------------------------------------------------------
 ---------------STYLING OF THE START-PAGE WILL BE HERE------------------------------
+-----------------------------------------------------------------------------------
  */
+.start_container {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    width: auto;
+    margin: auto;
+    text-align: center;
+    background-color: #DBEAE7;
+}
 
+.btn_container {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    display: flex;
+    margin: auto;
+    justify-content: space-evenly;
+}
 
+.btn_container button {
+    border-radius: 8px;
+    border-color: #392E3E;
+    border-width: .4rem;
+    background-color: #392E3E;
+    transition: transform 0.4s ease-in-out;
+}
+
+.btn_container button:hover {
+    transform: scale(105%);
+    opacity: 60%;
+}
+
+.start_container h1 {
+    font-family: Verdana;
+    font-size: 62px;
+}
+
+.btn_container img {
+    padding: 0;
+    background-size: cover;
+}
+
+.exit {
+    background-color: #392E3E;
+    width: 100%;
+    display: flex;
+    height: 3rem;
+    justify-content: flex-end;
+}
+
+.exit button {
+    margin: auto;
+    justify-content: flex-end;
+}
+
+.navBar {
+    width: 100%;
+    height: 3rem;
+    margin: auto;
+    background-color: #392E3E;
+    padding-top: 0;
+    justify-content: center;
+}
+
+.navBar p {
+    color: #E99B5D;
+    padding-top: 1rem;
+    font-family: Verdana;
+    font-size: 15px;
+}
 
 
 
 
 
 /*
+-----------------------------------------------------------------------------------
 ---------------STYLING OF THE LOGIN-PAGE WILL BE HERE------------------------------
+-----------------------------------------------------------------------------------
  */
 
 
@@ -18,5 +99,7 @@
 
 
 /*
----------------STYLING OF THE MAIN GAME HTML-FILE WILL BE HERE -----------------------------
+-----------------------------------------------------------------------------------
+---------------STYLING OF THE MAIN GAME WILL BE HERE ------------------------------
+-----------------------------------------------------------------------------------
  */
