--- a/Käyttöliittymä/style.game.css
+++ b/Käyttöliittymä/style.game.css
@@ -2,12 +2,17 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: #DBEAE7;
-    font-family: "Georgia Pro Black";
+    font-family: "Georgia Pro Black", verdana, sans-serif;
+}
+
+main {
+    display: flex;
 }
 
 .container {
-    width: 90%;
-    margin: auto;
+    height: auto;
+    width: 100%;
+    background-color: #DBEAE7;
 }
 
 .flex-wrap {
@@ -16,15 +21,17 @@ html, body {
 }
 
 .page-header {
-    background-color: #2a1836;
+    background-color: #392E3E;
     color: #DBEAE7;
-    border-radius: 4px;
     display: flex;
     justify-content: space-between;
+    border-radius: 6px;
+    box-shadow: #392E3E 3px 3px 10px;
+    border: 1px solid #392E3E;
 }
 
 .title {
-    font-size: 45px;
+    font-size: 40px;
     padding-left: 6rem;
 }
 
@@ -37,11 +44,15 @@ ul {
     list-style-type: none;
 }
 
+.buttons {
+    padding: 1rem;
+}
+
 .button {
-    color: #2a1836;
+    color: #392E3E;
     padding: 1rem;
     display: block;
-    background-color: #e99b5d;
+    background-color: #E99B5D;
     text-decoration: none;
     border-radius: 6px;
     border: 1px solid #DBEAE7;
@@ -49,60 +60,99 @@ ul {
 
 .hint {
     background-color: #85C094;
-    border-radius: 4px;
-    border: 1px solid #2a1836;
-    color: #2a1836;
-    padding: 1rem;
-}
-
-.coincidence {
-    border-radius: 4px;
-    border: 1px solid #2a1836;
-    color: #2a1836;
-    background-color: #c36bc4;
+    border-radius: 6px;
+    box-shadow: #392E3E 3px 3px 10px;
+    border: 1px solid #392E3E;
+    color: #392E3E;
     padding: 1rem;
 }
 
 .icao-button {
-    background-color: #e99b5d;
-    color: #2a1836;
+    background-color: #E99B5D;
+    color: #392E3E;
     padding: 1rem;
     text-decoration: none;
     border-radius: 6px;
-    border: 2px solid #DBEAE7;
+    box-shadow: #392E3E 3px 3px 10px;
+    border: 1px solid #392E3E;
+    display: block;
+    font-family: "Georgia Pro Black", verdana, sans-serif;
 }
 
-.buttons {
-    padding: 1rem;
+.icao-buttons {
+    padding: 1rem 0 1rem 0;
+    box-sizing: border-box;
+    width: 50%;
+    display: flex;
+}
+
+.work-button {
+    display: inline-flex;
+    box-sizing: border-box;
+    width: 30%;
 }
 
 .work {
-    border-radius: 4px;
-    border: 1px solid #2a1836;
-    color: #2a1836;
-    padding-left: 1rem;
-    background-color: #c36bc4;
+    border-radius: 6px;
+    box-shadow: #392E3E 3px 3px 10px;
+    border: 1px solid #392E3E;
+    color: #392E3E;
+    background-color: #B164B4;
+    text-align: center;
+    font-family: "Georgia Pro Black", verdana, sans-serif;
+}
+
+.coincidence-box {
+    padding: 1rem 0 1rem 0;
+}
+
+.coincidence {
+    border-radius: 6px;
+    box-shadow: #392E3E 3px 3px 10px;
+    border: 1px solid #392E3E;
+    color: #392E3E;
+    background-color: #B164B4;
+    padding: 1rem;
 }
 
 .status {
     background-color: #85C094;
-    border-radius: 4px;
-    border: 1px solid #2a1836;
-    color: #2a1836;
-    padding: 1rem;
+    border-radius: 6px;
+    box-shadow: #392E3E 3px 3px 10px;
+    border: 1px solid #392E3E;
+}
+
+#player-status {
+    border-spacing: 0;
+}
+
+#player-status td {
+    padding: 1rem 2rem 1rem 2rem;
+}
+
+#player-status td:first-child, #player-status td:nth-child(2) {
+    border-right: 1px solid #392E3E;
+}
+
+.game-map {
+    padding: 1.5rem;
 }
 
 .map {
-    height: auto;
-    width: 100%;
-    border: 1px solid #2a1836;
-    border-radius: 4px;
+    border-radius: 6px;
+    box-shadow: #392E3E 3px 3px 10px;
+    border: 1px solid #392E3E;
 }
 
 #map {
-    width: 500px;
-    height: 500px;
+    border-radius: 6px;
+    width: 650px;
+    height: 625px;
 }
 
-.game-elements {
+.elements {
+    padding: 1.5rem;
+    width: 50%;
+    box-sizing: border-box;
+    flex-wrap: wrap;
 }
