--- a/HTML+CSS/styling.css
+++ b/HTML+CSS/styling.css
@@ -47,6 +47,7 @@ ourColorPalette {
 .start_container h1 {
     font-family: Verdana;
     font-size: 62px;
+    color: #392E3E;
 }
 
 .btn_container img {
@@ -58,30 +59,33 @@ ourColorPalette {
     background-color: #392E3E;
     width: 100%;
     display: flex;
-    height: 3rem;
+    height: 4rem;
     justify-content: flex-end;
 }
 
 .exit button {
-    margin: auto;
     justify-content: flex-end;
 }
 
 .navBar {
     width: 100%;
-    height: 3rem;
+    height: 4rem;
     margin: auto;
-    background-color: #392E3E;
-    padding-top: 0;
-    justify-content: center;
+    background-color: #E99B5D;
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 1rem;
 }
 
-.navBar p {
-    color: #E99B5D;
-    padding-top: 1rem;
-    font-family: Verdana;
-    font-size: 15px;
+.navBar button {
+    width: 100px;
+    height: 50px;
+    margin-right: 2rem;
+    border-radius: 5px;
+
 }
+
+
 
 
 
@@ -93,13 +97,24 @@ ourColorPalette {
 -----------------------------------------------------------------------------------
  */
 
+.loginMain {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    padding: 5rem;
+}
 
+.loginForm {
+    padding: 10rem;
+    background-color: #E99B5D;
+    border: 7px solid #DBEAE7;
+    border-radius: 8px;
+}
 
+.loginBody {
+    background-color: #392E3E;
+}
 
-
-
-/*
------------------------------------------------------------------------------------
----------------STYLING OF THE MAIN GAME WILL BE HERE ------------------------------
------------------------------------------------------------------------------------
- */
+.loginForm input {
+    height: 25px;
+}
