--- a/HTML+CSS/styling.css
+++ b/HTML+CSS/styling.css
@@ -8,7 +8,7 @@ ourColorPalette {
 }
 
 @font-face {
-    font-family: Verdana, sans-serif;
+    font-family: sans-serif;
 }
 
 /*
@@ -62,8 +62,9 @@ ourColorPalette {
     background-color: #392E3E;
     width: 100%;
     display: flex;
-    height: 4rem;
+    height: 6rem;
     justify-content: flex-end;
+    border: 4px solid #E99B5D;
 }
 
 .exit button {
@@ -87,9 +88,8 @@ ourColorPalette {
     width: 100px;
     height: 50px;
     margin-right: 2rem;
-    border-radius: 5px;
+    border-radius: 30px;
     font-family: inherit;
-
 }
 
 
@@ -112,21 +112,63 @@ ourColorPalette {
 }
 
 .loginForm {
-    padding: 10rem;
-    background-color: #E99B5D;
-    border: 7px solid #DBEAE7;
+    padding: 5rem;
+    background-color: #DBEAE7;
+    border: 15px outset #85C094;
     border-radius: 8px;
 }
 
 .loginBody {
-    background-color: #392E3E;
+    background-color: #DBEAE7;
 }
 
 .loginForm input {
     height: 25px;
+    display: block;
+    margin: auto;
+    border: 3px solid #357654;
+    border-radius: 15px;
 }
 
 .loginNav2 {
-    background-color: #E99B5D;
-    height: 3rem;
+    background-color: #B164B4;
+    height: 4rem;
+    border: 5px solid #392E3E;
+    border-radius: 5px;
 }
+
+.logSubmit {
+    display: flex;
+    margin: auto;
+    margin-top: 1rem;
+}
+
+.logSubmit input {
+    border-radius: 14px;
+    font-family: inherit;
+}
+
+.navBar2 {
+    width: 100%;
+    height: 4rem;
+    margin: auto;
+    background-color: #B164B4;
+    display: flex;
+    padding-top: 1rem;
+    border: 5px solid #392E3E;
+    border-radius: 5px;
+}
+
+.exitBtn {
+    display: flex;
+    margin auto;
+    padding-bottom: 8rem;
+    justify-content: center;
+}
+
+.exitBtn button {
+    border: 1.5px solid #392E3E;
+    border-radius: 4px;
+    scale: 200%;
+}
+
