--- a/Käyttöliittymä/style.game.css
+++ b/Käyttöliittymä/style.game.css
@@ -78,16 +78,16 @@ ul {
     font-family: "Georgia Pro Black", verdana, sans-serif;
 }
 
-.icao-buttons {
-    padding: 1rem 0 1rem 0;
+.box {
     box-sizing: border-box;
     display: flex;
+    padding: 1rem;
+    justify-content: space-evenly;
 }
 
 .work-button {
     display: inline-flex;
     box-sizing: border-box;
-    padding: 1rem;
 }
 
 .work {
@@ -101,7 +101,7 @@ ul {
 }
 
 .coincidence-box {
-    padding: 1rem 0 1rem 0;
+    padding: 1rem;
 }
 
 .coincidence {
