--- a/Käyttöliittymä/style.game.css
+++ b/Käyttöliittymä/style.game.css
@@ -74,8 +74,8 @@ ul {
     border-radius: 6px;
     box-shadow: #392E3E 3px 3px 10px;
     border: 1px solid #392E3E;
-    display: block;
     font-family: "Georgia Pro Black", verdana, sans-serif;
+    display: flex;
 }
 
 .box {
