--- a/Käyttöliittymä/style.game.css
+++ b/Käyttöliittymä/style.game.css
@@ -147,6 +147,7 @@ ul {
     border-radius: 6px;
     width: 650px;
     height: 600px;
+    visibility: hidden;
 }
 
 .elements {
@@ -154,4 +155,40 @@ ul {
     width: 50%;
     box-sizing: border-box;
     flex-wrap: wrap;
+}
+
+/* MODALS */
+
+.help-modal, .instruction-modal, .work-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #DBEAE7;
+}
+
+.help-content, .instruction-content, .work-content {
+    background-color: #85C094;
+    margin: 15% auto;
+    padding: 2rem;
+    border: 1px solid #392E3E;
+    border-radius: 6px;
+    width: 70%;
+    color: #392E3E;
+}
+
+.close {
+  font-size: 28px;
+  font-weight: bold;
+  color: #392E3E;
+}
+
+.close:hover, .close:focus {
+  color: #392E3E;
+  text-decoration: none;
+  cursor: pointer;
 }
