--- a/HTML+CSS/styling.css
+++ b/HTML+CSS/styling.css
@@ -96,6 +96,8 @@ ourColorPalette {
     background-color: #85C094;
     border-radius: 6px;
     position: absolute;
+    height: 100%;
+    width: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale (0.1);
