--- a/HTML+CSS/styling.css
+++ b/HTML+CSS/styling.css
@@ -11,6 +11,12 @@ ourColorPalette {
     font-family: sans-serif;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 /*
 -----------------------------------------------------------------------------------
 ---------------STYLING OF THE START-PAGE WILL BE HERE------------------------------
@@ -28,7 +34,7 @@ ourColorPalette {
 
 .btn_container {
     padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-bottom: 15rem;
     display: flex;
     margin: auto;
     justify-content: space-evenly;
@@ -93,7 +99,7 @@ ourColorPalette {
 }
 
 .aboutPop {
-    background-color: #85C094;
+    background-color: #DBEAE7;
     border-radius: 6px;
     position: absolute;
     height: 100%;
@@ -102,9 +108,27 @@ ourColorPalette {
     left: 50%;
     transform: translate(-50%, -50%) scale (0.1);
     text-align: center;
-    padding: 0 30px 30px;
     visibility: hidden;
     transition: transform 0.4s, top 0.4s;
+}
+
+.aboutPop p {
+    width: 60%;
+    margin: auto;
+    padding-top: 10rem;
+    font-family: "Georgia Pro Black", verdana, sans-serif;
+}
+
+.aboutPop h2 {
+    padding-top: 4rem;
+    font-family: "Georgia Pro Black", verdana, sans-serif
+}
+
+.aboutPop button {
+    border-radius: 3px;
+    scale: 200%;
+    background-color: #DBEAE7;
+    margin-top: 6rem;
 }
 
 .openAbout {
@@ -196,4 +220,136 @@ ourColorPalette {
     margin: auto;
     justify-content: center;
     padding: 1.5rem;
+}
+
+/* BUTTONS HERE */
+/* CSS */
+/* credit: https://getcssscan.com/css-buttons-examples */
+.button-85 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+/*--------------------------------------------------*/
+
+
+/* CSS BUTTONS*/
+.button-61 {
+  align-items: center;
+  appearance: none;
+  border-radius: 4px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 1px -2px,rgba(0, 0, 0, .14) 0 2px 2px 0,rgba(0, 0, 0, .12) 0 1px 5px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: Roboto,sans-serif;
+  font-size: .875rem;
+  font-weight: 500;
+  height: 36px;
+  justify-content: center;
+  letter-spacing: .0892857em;
+  line-height: normal;
+  min-width: 64px;
+  outline: none;
+  overflow: visible;
+  padding: 0 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  will-change: transform,opacity;
+}
+
+.button-61:hover {
+  box-shadow: rgba(0, 0, 0, .2) 0 2px 4px -1px, rgba(0, 0, 0, .14) 0 4px 5px 0, rgba(0, 0, 0, .12) 0 1px 10px 0;
+}
+
+.button-61:disabled {
+  background-color: rgba(0, 0, 0, .12);
+  box-shadow: rgba(0, 0, 0, .2) 0 0 0 0, rgba(0, 0, 0, .14) 0 0 0 0, rgba(0, 0, 0, .12) 0 0 0 0;
+  color: rgba(0, 0, 0, .37);
+  cursor: default;
+  pointer-events: none;
+}
+
+.button-61:not(:disabled) {
+  background-color: #6200ee;
+}
+
+.button-61:focus {
+  box-shadow: rgba(0, 0, 0, .2) 0 2px 4px -1px, rgba(0, 0, 0, .14) 0 4px 5px 0, rgba(0, 0, 0, .12) 0 1px 10px 0;
+}
+
+.button-61:active {
+  box-shadow: rgba(0, 0, 0, .2) 0 5px 5px -3px, rgba(0, 0, 0, .14) 0 8px 10px 1px, rgba(0, 0, 0, .12) 0 3px 14px 2px;
+  background: #A46BF5;
 }
