--- a/Käyttöliittymä/style.game.css
+++ b/Käyttöliittymä/style.game.css
@@ -82,7 +82,7 @@ ul {
     box-sizing: border-box;
     display: flex;
     padding: 1rem;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .work-button {
