--- a/HTML+CSS/styling.css
+++ b/HTML+CSS/styling.css
@@ -49,15 +49,15 @@ html, body {
 }
 
 .btn_container img {
-    border-radius: 0;
-    border: 4px solid #392E3E;
+    border-radius: 4px;
+    border: 8px outset #392E3E;
     background-color: #392E3E;
 }
 
 .btn_container img:hover {
     transform: scale(102%);
     opacity: 80%;
-    box-shadow: 3px 3px 7px #B164B4;
+    box-shadow: 3px 3px 10px #B164B4;
 }
 
 .start_container h1 {
@@ -96,11 +96,11 @@ html, body {
 }
 
 .navBar button {
-    width: 100px;
-    height: 50px;
+    display: flex;
     margin-right: 2rem;
-    border-radius: 30px;
-    font-family: inherit;
+    justify-content: center;
+    scale: 110%;
+    margin-top: .5rem;
 }
 
 .aboutPop {
