--- a/Käyttöliittymä/style.game.css
+++ b/Käyttöliittymä/style.game.css
@@ -171,6 +171,10 @@ ul {
     background-color: #DBEAE7;
 }
 
+.work-modal {
+    margin-top: 9%;
+}
+
 .help-content, .instruction-content, .work-content {
     background-color: #85C094;
     margin: auto;
@@ -192,4 +196,68 @@ ul {
   color: #392E3E;
   text-decoration: none;
   cursor: pointer;
+}
+
+/* WORK BUTTONS */
+
+.stay-to-work {
+    padding-left: 1rem;
+}
+
+.work-box {
+    background-color: #DBEAE7;
+    border: 1px solid #392E3E;
+    border-radius: 6px;
+    box-shadow: #392E3E 3px 3px 10px;
+    padding-left: 1rem;
+}
+
+.work-header {
+    color: #392E3E;
+    box-sizing: border-box;
+}
+
+.work-buttons {
+    display: flex;
+    padding: 1rem;
+}
+
+.flower-button {
+    background-color: #B164B4;
+    padding: 0.5rem;
+    border-radius: 6px;
+    border: 1px solid #DBEAE7;
+    box-shadow: #392E3E 3px 3px 10px;
+}
+
+.burger-button {
+    background-color: #E99B5D;
+    padding: 0.5rem;
+    border-radius: 6px;
+    border: 1px solid #DBEAE7;
+    box-shadow: #392E3E 3px 3px 10px;
+}
+
+.exchange-button {
+    background-color: #357654;
+    padding: 0.5rem;
+    border-radius: 6px;
+    border: 1px solid #DBEAE7;
+    box-shadow: #392E3E 3px 3px 10px;
+}
+
+#select-flower, #select-burger, #select-exchange {
+    background-color: #392E3E;
+    border: 1px solid #DBEAE7;
+    color: #DBEAE7;
+    padding: 1rem;
+    border-radius: 6px;
+}
+
+.selected-job {
+    background-color: #392E3E;
+    color: #DBEAE7;
+    border-radius: 6px;
+    border: 1px solid #DBEAE7;
+    padding: 1rem;
 }
