--- a/HTML+CSS/styling.css
+++ b/HTML+CSS/styling.css
@@ -30,6 +30,8 @@ html, body {
     background-color: #DBEAE7;
 }
 
+
+
 .start_container {
     max-width: 100%;
     max-height: 100%;
@@ -37,16 +39,19 @@ html, body {
     width: auto;
     margin: auto;
     text-align: center;
-    background-color: #DBEAE7;
+    background-color: #392E3E;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
     padding-bottom: 5rem;
 }
 
 .btn_container {
-    padding-bottom: 15rem;
+    padding-bottom: 1rem;
     display: flex;
     justify-content: center;
     margin: auto 3rem;
 }
+
 
 .pad {
     border-bottom: 4px solid #392E3E;
@@ -77,6 +82,7 @@ html, body {
     opacity: 80%;
     box-shadow: 3px 3px 10px #B164B4;
 }
+
 
 .startHeader {
     padding-bottom: 2rem;
@@ -110,13 +116,14 @@ html, body {
     width: 100%;
     height: 4rem;
     margin: auto;
-    background-color: #392E3E;
+    background-color: #85C094;
     display: flex;
     justify-content: flex-end;
     border-radius: 5px;
     padding-top: 1rem;
     box-shadow: 3px 3px 6px #B164B4;
 }
+
 
 .navBar button {
     display: flex;
