dots have now different colors

--- a/FINAL/game/style.game.css
+++ b/FINAL/game/style.game.css
@@ -286,6 +286,19 @@ ul {
   padding: 1rem;
 }
 
+/* Leaflet icons */
+.blue-icon {
+  background-color: #2474ff;
+  border-radius: 50%;
+  border: 5px solid rgba(255, 255, 255, 0.5);
+}
+
+.green-icon {
+  background-color: #27ba35;
+  border-radius: 50%;
+  border: 5px solid rgba(255, 255, 255, 0.5);
+}
+
 /* HELP_MENU */
 
 .help-menu-content {
