--- a/FINAL/styling.css
+++ b/FINAL/styling.css
@@ -85,7 +85,8 @@ html, body {
 .btn_container img:hover {
     transform: scale(102%) translateY(-15px);
     opacity: 80%;
-    box-shadow: 3px 3px 10px #B164B4;
+    box-shadow: 7px 7px 25px #B164B4;
+    border: 3px solid #DBEAE7;
 }
 
 
@@ -153,7 +154,7 @@ html, body {
 }
 
 .aboutPop p {
-    width: 40%;
+    width: 60%;
     margin: auto;
     padding-top: 10rem;
     font-family: "Georgia Pro Black", verdana, sans-serif;
@@ -195,9 +196,9 @@ html, body {
 .instructionsPop p {
     width: 80%;
     margin: auto;
-    padding-top: 5rem;
+    padding-top: 3rem;
     font-family: "Georgia Pro Black", verdana, sans-serif;
-    padding-bottom: 5rem;
+    padding-bottom: 3rem;
 }
 
 .instructionsPop h2 {
@@ -217,6 +218,7 @@ html, body {
     visibility: visible;
     top: 50%;
     transform: translate(-50%, -50%) scale(1);
+    z-index: 2;
 }
 
 
