--- a/FINAL/game/style.game.css
+++ b/FINAL/game/style.game.css
@@ -183,7 +183,9 @@ ul {
 .help-modal,
 .instruction-modal,
 .work-modal,
-.exit-modal {
+.exit-modal,
+.winner-modal,
+.loser-modal {
   display: none;
   position: fixed;
   z-index: 1;
@@ -195,12 +197,18 @@ ul {
   background-color: #dbeae7;
 }
 
+.winner-modal {
+  background-color: #a9e5b6;
+}
+
 .personal-content,
 .leader-content,
 .help-content,
 .instruction-content,
 .work-content,
-.exit-content {
+.exit-content,
+.winner-content,
+.loser-content {
   background-color: #85c094;
   margin: auto;
   padding: 2rem;
@@ -221,8 +229,13 @@ ul {
 }
 
 .leader-content {
-  width: 40%;
+  width: 60%;
   margin-top: 1rem;
+}
+
+.instruction-content {
+  font-size: 0.8rem;
+  line-height: 1.5rem;
 }
 
 .help-content {
@@ -235,7 +248,18 @@ ul {
   text-align: center;
 }
 
-#exit {
+.winner-content {
+  width: 80%;
+  background-color: #357654;
+  color: #DBEAE7;
+  text-align: center;
+  border: 5px solid #d141d9;
+  box-shadow: #9e04a2 5px 5px 10px;
+  margin-top: 10%;
+}
+
+#exit,
+#reset {
   text-decoration: none;
 }
 
@@ -300,7 +324,8 @@ ul {
 #select-burger,
 #select-exchange,
 #continue,
-#exit {
+#exit,
+#reset {
   background-color: #392e3e;
   border: 1px solid #dbeae7;
   color: #dbeae7;
@@ -313,7 +338,8 @@ ul {
 #select-burger:hover,
 #select-exchange:hover,
 #continue:hover,
-#exit:hover {
+#exit:hover,
+#reset:hover {
   color: #85c094;
 }
 
@@ -385,4 +411,10 @@ ul {
   border: 1px solid #392e3e;
   border-radius: 6px;
   padding: 0.5rem;
+}
+
+.play-again {
+  display: flex;
+  padding: 2rem;
+  justify-content: center;
 }
