--- a/FINAL/game/style.game.css
+++ b/FINAL/game/style.game.css
@@ -201,6 +201,10 @@ ul {
   background-color: #a9e5b6;
 }
 
+.loser-modal {
+  background-color: #f17f7f;
+}
+
 .personal-content,
 .leader-content,
 .help-content,
@@ -255,6 +259,16 @@ ul {
   text-align: center;
   border: 5px solid #d141d9;
   box-shadow: #9e04a2 5px 5px 10px;
+  margin-top: 10%;
+}
+
+.loser-content {
+  width: 80%;
+  background-color: #f55e5e;
+  color: #392E3E;
+  text-align: center;
+  border: 5px solid #392E3E;
+  box-shadow: rgba(0, 0, 0, 0.62) 5px 5px 10px;
   margin-top: 10%;
 }
 
