--- a/FINAL/game/style.game.css
+++ b/FINAL/game/style.game.css
@@ -233,7 +233,7 @@ ul {
 }
 
 .leader-content {
-  width: 60%;
+  width: 40%;
   margin-top: 1rem;
 }
 
@@ -411,6 +411,7 @@ ul {
   background-color: #b164b4;
   padding: 0.5rem;
   color: #dbeae7;
+  margin: auto;
 }
 
 #leader-board-scores {
