--- a/FINAL/styling.css
+++ b/FINAL/styling.css
@@ -79,6 +79,7 @@ html, body {
     opacity: 80%;
     box-shadow: 7px 7px 25px #B164B4;
     border: 3px solid #DBEAE7;
+    cursor: pointer;
 }
 
 
@@ -310,6 +311,10 @@ html, body {
     justify-content: center;
     padding: 1.5rem;
     font-family: inherit;
+}
+
+.login:hover, .register:hover {
+    cursor: pointer
 }
 
 /* BUTTONS HERE */
